style:Cambio de link

--- a/Salud-Bienestar/html/principalods.html
+++ b/Salud-Bienestar/html/principalods.html
@@ -119,15 +119,15 @@
             </li>
 
             <li class="navbar-item">
-                <a href="/salud-Bienestar/html/SYMB.html" class="navbar-link hover-underline">
+                <a href="/salud-Bienestar/html/SYBM.html" class="navbar-link hover-underline">
                     <div class="separator"></div>
     
-                    <span class="span">SYMB</span>
+                    <span class="span">SYBM</span>
                 </a>
             </li>
 
             <li class="navbar-item">
-            <a href="/salud-Bienestar/html/galeriaods.html" class="navbar-link hover-underline">
+            <a href="/salud-Bienestar/html/SYBM.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
 
                 <span class="span">Galeria</span>
@@ -135,7 +135,7 @@
             </li>
 
             <li class="navbar-item">
-            <a href="/salud-Bienestar/html/recursosods.html" class="navbar-link hover-underline">
+            <a href="/salud-Bienestar/html/SYBM.html" class="navbar-link hover-underline">
                 <div class="separator"></div>
 
                 <span class="span">Recursos</span>
