--- a/Salud-Bienestar/html/recursosods.html
+++ b/Salud-Bienestar/html/recursosods.html
@@ -134,10 +134,10 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="/salud-Bienestar/html/SYMB.html" class="navbar-link hover-underline">
+                        <a href="/salud-Bienestar/html/SYBM.html" class="navbar-link hover-underline">
                             <div class="separator"></div>
             
-                            <span class="span">SYMB</span>
+                            <span class="span">SYBM</span>
                         </a>
                     </li>
 
