--- a/Raices-Cañetanas/index.html
+++ b/Raices-Cañetanas/index.html
@@ -718,7 +718,7 @@
             DE LUNES A SÁBADO <span class="span">7:00 pm</span> to <span class="span">10:00 pm</span>
           </p>
 
-          <a href="Raices-Cañetanas/html/(index).html" class="btn btn-primary">
+          <a href="/Raices-Cañetanas/html/(index).html" class="btn btn-primary">
             <span class="text text-1">VER TODO EL MENU</span>
 
             <span class="text text-2" aria-hidden="true">VER TOTO EL MENU</span>
