--- a/Raices-Cañetanas/assets/html/contactanos.html
+++ b/Raices-Cañetanas/assets/html/contactanos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/RC/assets/css/style.css">
+    <link rel="stylesheet" href="/Raices-Cañetanas/assets/css/style.css">
   <!-- 
     - seccion para el elemento del icono
   -->
@@ -16,7 +16,7 @@
   <!-- 
     - icons
   -->
-  <link rel="shortcut icon" href="/RC/assets/images/ ./assets/images/badge-2.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="/Raices-Cañetanas/assets/images/ ./assets/images/badge-2.png" type="image/svg+xml">
 
   <!-- 
     - google font link
@@ -28,14 +28,14 @@
   <!-- 
     - link css
   -->
-  <link rel="stylesheet" href="/RC/assets/css/style.css">
+  <link rel="stylesheet" href="/Raices-Cañetanas/assets/css/style.css">
 
   <!-- 
     - Imagenes para  le banner 
   -->
-  <link rel="preload" as="image" href="/RC/assets/images/hero-slider-1.jpg">
-  <link rel="preload" as="image" href="/RC/assets/images/hero-slider-2.jpg">
-  <link rel="preload" as="image" href="/RC/assets/images/hero-slider-3.jpg">
+  <link rel="preload" as="image" href="/Raices-Cañetanas/assets/images/hero-slider-1.jpg">
+  <link rel="preload" as="image" href="/Raices-CañetanasC/assets/images/hero-slider-2.jpg">
+  <link rel="preload" as="image" href="/Raices-Cañetanas-Cañetanas/assets/images/hero-slider-3.jpg">
 
 </head>
 
@@ -114,7 +114,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="/RC/assets/images/badge-2.png" width="50" height="50" alt="raícescañetanas">
+        <img src="/Raices-Cañetanas/assets/images/badge-2.png" width="50" height="50" alt="raícescañetanas">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -130,7 +130,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="/RC/index.html" class="navbar-link hover-underline active">
+            <a href="/Raices-Cañetanas/assets/html/contactanos.html" class="navbar-link hover-underline active">
               <div class="separator"></div>
 
               <span class="span">INICIO</span>
@@ -170,7 +170,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="/RC/assets/html/contactanos.html" class="navbar-link hover-underline">
+            <a href="/Raices-Cañetanas/assets/html/contactanos.html" class="navbar-link hover-underline">
               <div class="separator"></div>
 
               <span class="span">CONTACTO</span>
@@ -232,7 +232,7 @@
           <li class="slider-item active" data-hero-slider-item>
 
             <div class="slider-bg">
-              <img src="/RC/assets/images/hero-slider-1.jpg" width="1880" height="950" alt="" class="img-cover">
+              <img src="/Raices-Cañetanas/assets/images/hero-slider-1.jpg" width="1880" height="950" alt="" class="img-cover">
             </div>
 
             <p class="label-2 section-subtitle slider-reveal">Panes Tradicionales</p>
@@ -257,7 +257,7 @@
           <li class="slider-item" data-hero-slider-item>
 
             <div class="slider-bg">
-              <img src="/RC/assets/images/hero-slider-2.jpg" width="1880" height="950" alt="" class="img-cover">
+              <img src="/Raices-Cañetanas/assets/images/hero-slider-2.jpg" width="1880" height="950" alt="" class="img-cover">
             </div>
 
             <p class="label-2 section-subtitle slider-reveal">Vive una Experiencia unica</p>
@@ -282,7 +282,7 @@
           <li class="slider-item" data-hero-slider-item>
 
             <div class="slider-bg">
-              <img src="/RC/assets/images/hero-slider-3.jpg" width="1880" height="950" alt="" class="img-cover">
+              <img src="/Raices-Cañetanas/assets/images/hero-slider-3.jpg" width="1880" height="950" alt="" class="img-cover">
             </div>
 
             <p class="label-2 section-subtitle slider-reveal">Increíble y delicioso</p>
@@ -315,7 +315,7 @@
         </button>
 
         <a href="#" class="hero-btn has-after">
-          <img src="/RC/assets/images/features-icon-2.png" width="80" height="80" alt="booking icon">
+          <img src="/Raices-Cañetanas/assets/images/features-icon-2.png" width="80" height="80" alt="booking icon">
 
           <span class="label-2 text-center span"></span>
         </a>
@@ -343,7 +343,7 @@
           </div>
 
           <div class="profile">
-            <img src="/RC/assets/images/avatar-1.jpg" width="150" height="150" loading="lazy" alt="Sara Mendez"
+            <img src="/Raices-Cañetanas/assets/images/avatar-1.jpg" width="150" height="150" loading="lazy" alt="Sara Mendez"
               class="img">
 
             <p class="label-2 profile-name"> Sara Mendez </p>
@@ -372,7 +372,7 @@
           </div>
 
           <div class="profile">
-            <img src="/RC/assets/images/avatar-2.jpg" width="150" height="150" loading="lazy" alt="Sam Jhonson"
+            <img src="/Raices-Cañetanas/assets/images/avatar-2.jpg" width="150" height="150" loading="lazy" alt="Sam Jhonson"
               class="img">
 
             <p class="label-2 profile-name"> Jhonson Diaz </p>
@@ -401,7 +401,7 @@
           </div>
 
           <div class="profile">
-            <img src="/RC/assets/images/avatar-3.jpg" width="150" height="150" loading="lazy" alt="Sam Jhonson"
+            <img src="/Raices-Cañetanas/assets/images/avatar-3.jpg" width="150" height="150" loading="lazy" alt="Sam Jhonson"
               class="img">
 
             <p class="label-2 profile-name"> Sofia García </p>
@@ -423,26 +423,19 @@
 
           <div class="form reservation-form bg-black-10">
 
-            <form action="" class="form-left">
-
+            <form action="/salud-Bienestar/php/reservas.php" method="POST" class="form-left">
               <h2 class="headline-1 text-center">RESERVA EN LINEA</h2>
-
               <p class="form-text text-center">
                 SOLICITUD DE RESERVA <a href="tel:+88123123456" class="link">+51-987-654-321</a>
                 o rellene el formulario de pedido
               </p>
-
               <div class="input-wrapper">
                 <input type="text" name="name" placeholder="Su Nombre" autocomplete="off" class="input-field">
-
                 <input type="tel" name="phone" placeholder="Número de Telefono" autocomplete="off" class="input-field">
               </div>
-
               <div class="input-wrapper">
-
                 <div class="icon-wrapper">
                   <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
-
                   <select name="person" class="input-field">
                     <option value="1-person">1 Persona</option>
                     <option value="2-person">2 Persona</option>
@@ -559,7 +552,7 @@
               <div class="feature-card">
 
                 <div class="card-icon">
-                  <img src="/RC/assets/images/avatar-1.jpg" width="100" height="80" loading="lazy" alt="icon">
+                  <img src="/Salud-Bienestar/partners/karla.jpg" width="100" height="80" loading="lazy" alt="icon">
                 </div>
 
                 <h3 class="title-2 card-title">Karla Magallanes</h3>
@@ -574,7 +567,7 @@
               <div class="feature-card">
 
                 <div class="card-icon">
-                  <img src="/RC/assets/images/avatar-2.jpg" width="100" height="80" loading="lazy" alt="icon">
+                  <img src="/Salud-Bienestar/partners/lucas.jpg" width="100" height="80" loading="lazy" alt="icon">
                 </div>
 
                 <h3 class="title-2 card-title">Lucas leyva</h3>
@@ -589,7 +582,7 @@
               <div class="feature-card">
 
                 <div class="card-icon">
-                  <img src="/RC/assets/images/avatar-3.jpg" width="100" height="80" loading="lazy" alt="icon">
+                  <img src="/Salud-Bienestar/partners/luis.jpg" width="100" height="80" loading="lazy" alt="icon">
                 </div>
 
                 <h3 class="title-2 card-title">Luis Mencia</h3>
@@ -615,7 +608,7 @@
   -->
 
   <footer class="footer section has-bg-image text-center"
-    style="background-image: url('/RC/assets/images/panes.png')">
+    style="background-image: url('/Raices-Cañetanas/assets/images/panes.png')">
     <div class="container">
 
       <div class="footer-top grid-list">
@@ -623,7 +616,7 @@
         <div class="footer-brand has-before has-after">
 
           <a href="#" class="logo">
-            <img src="/RC/assets/images/badge-2.png" width="160" height="50" loading="lazy" alt="Raices Cañetanas">
+            <img src="/Raices-Cañetanas-Cañetanas/assets/images/badge-2.png" width="160" height="50" loading="lazy" alt="Raices Cañetanas">
           </a>
 
           <address class="body-4">
@@ -745,11 +738,13 @@
   <!-- 
     - custom js link
   -->
-  <script src="/RC/assets/js/script.js"></script>
+  <script src="/Raices-Cañetanas/assets/js/script.js"></script>
 
   <!-- 
     - ionicon link
   -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="/Raices-Cañetanas/assets/js/reservas-validation.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
