--- a/Raices-Cañetanas/index.html
+++ b/Raices-Cañetanas/index.html
@@ -114,7 +114,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/badge-2.png" width="50" height="50" alt="raícescañetanas">
+        <img src="/Raices-Cañetanas/assets/images/badge-2.png" width="50" height="50" alt="raícescañetanas">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -718,7 +718,7 @@
             DE LUNES A SÁBADO <span class="span">7:00 pm</span> to <span class="span">10:00 pm</span>
           </p>
 
-          <a href="/Raices-Cañetanas/" class="btn btn-primary">
+          <a href="/Raices-Cañetanas/html/RC.html" class="btn btn-primary">
             <span class="text text-1">VER TODO EL MENU</span>
 
             <span class="text text-2" aria-hidden="true">VER TOTO EL MENU</span>
@@ -1194,7 +1194,7 @@
           </li>
 
           <li>
-            <a href="/RC/assets/html/contactanos.html" class="label-2 footer-link hover-underline">Contacto</a>
+            <a href="/Raices-Cañetanas/assets/html/contactanos.html" class="label-2 footer-link hover-underline">Contacto</a>
           </li>
 
         </ul>
