style: cambio de botones en el carrucel

--- a/Salud-Bienestar/html/SYBM.html
+++ b/Salud-Bienestar/html/SYBM.html
@@ -208,7 +208,7 @@
                             <p class="mx-md-5 px-5">Tu bienestar es una prioridad, porque cuando te cuidas, puedes
                                 brillar con todo tu potencial.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp"
-                                href="#">Más Información</a>
+                                href="#boton-1">Más Información</a>
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                                 Prueba masajes prenatales, rutinas de cuidado de la piel y ejercicios suaves como yoga o
                                 caminatas.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp"
-                                href="#">Más Información</a>
+                                href="#boton-2">Más Información</a>
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                                 hermosas y responsables que vivirás. Cada pequeño gesto es una muestra de amor que lo
                                 acompañará en su primer viaje por la vida.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp"
-                                href="#">Más Información</a>
+                                href="#cuidados">Más Información</a>
                         </div>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                                 cada etapa, tu bienestar es clave para el desarrollo de esa pequeña vida que crece
                                 dentro de ti.</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp"
-                                href="#">Más Información</a>
+                                href="#boton-4">Más Información</a>
                         </div>
                     </div>
                 </div>
@@ -372,7 +372,7 @@
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">¿Por que es importante
                         cuidarnos?</h6>
-                    <h1 class="mb-4">Razones Claves</h1>
+                    <h1 id="boton-1" class="mb-4">Razones Claves</h1>
                     <p class="pl-4 border-left border-primary">
                     <ul>
                         <li>
@@ -424,7 +424,7 @@
                 <div class="col-lg-6 pt-5 pb-lg-5">
                     <div class="hours-text bg-light p-4 p-lg-5 my-lg-5">
                         <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">EL EMBARAZO</h6>
-                        <h1 class="mb-4">¿Que Busca el ODS 03?</h1>
+                        <h1 id="boton-2"  class="mb-4">¿Que Busca el ODS 03?</h1>
                         <p>Una de las metas principales del ODS 3 es reducir la tasa mundial de mortalidad materna a
                             menos de 70 por cada 100,000 nacidos vivos. Esto implica garantizar acceso a servicios de
                             salud reproductiva, prenatal y postnatal, especialmente en áreas rurales y desfavorecidas.
@@ -560,7 +560,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Recomendaciones para Recien Nacidos</h6>
-                    <h1 class="mb-4">DE MAMIS PARA MAMIS!</h1>
+                    <h1 id="boton-4" class="mb-4">DE MAMIS PARA MAMIS!</h1>
                     <div class="owl-carousel testimonial-carousel">
                         <div class="position-relative">
                             <i class="fa fa-3x fa-quote-right text-primary position-absolute"
